Inclusao de validações e segurança (Comentado)

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,3 +1,6 @@
 application.name = "Sistema de Vendas Bummpay - PROD"
 server.port=8081
 server.servlet.context-path=/bummpay
+
+security.jwt.expiracao = 30
+security.jwt.chave-assinatura = ZmxhbWVuZ28gY2FtcGXDo28gbXVkaWFsIDE5ODE=
