--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -11,6 +11,9 @@ spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled = true
 spring.h2.console.path = /h2-console
 
-spring.jpa.properties.hibernate.show_sql = true
-spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.properties.hibernate.show_sql = true
+#spring.jpa.properties.hibernate.format_sql = true
+
+security.jwt.expiracao = 30
+security.jwt.chave-assinatura = ZmxhbWVuZ28gY2FtcGXDo28gbXVkaWFsIDE5ODE=
 
